# hyprland-xdg-toplevel-move

./: .gitignore  README.md  flake.nix  hyprload.toml  meson.build  plugin.nix
src/: main.cpp  meson.build
